K1J-1752: Add ArendeListItemProjection for optimized list queries and update repository methods to use it. Optimize logic to avoid multiple calls to service and fetch Arende in batch. Remove response from FragaSvar from list view endpoints. (#1285)